# family-sun

./: .gitignore  README.md  docker-compose.yml  generate_sunburst_chart.py  pyproject.toml  read_gedcom.py  requirements.in
backend/: .dockerignore  Dockerfile  main.py  requirements.txt
backend/utils/: constants.py  metadata.py  process_gedcom.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  ChartArea.css  ChartArea.jsx  Controls.jsx  Sidebar.css  Sidebar.jsx  SunburstControls.css  SunburstControls.jsx
src/family_sun/: generate_family_tree.py  process_gedcom.py
src/family_sun/utils/: color_palettes.py  metadata.py  process_gedcom.py
